--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,24 +1,29 @@
-# Файл nginx.conf
 server {
-  listen 80;
+    listen 80;
 
-  # Запросы по адресам /api/... перенаправляй в контейнер backend
-  location /api/ {
-    # Это и есть нужная строка:
-    # при перенаправлении запроса в контейнер backend
-    # подменить адрес "backend" в заголовке запроса 
-    # на тот адрес, который пользователь ввёл в браузере
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
-  }
-  location /admin/ {
-    # И в этом блоке то же самое:
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/admin/;
-  }
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:9000/api/;
+    }
 
-  location / {
-    alias /staticfiles/;
-    index index.html;
-  }
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:9000/admin/;
+    }
+
+    # Обслуживание статических файлов
+    location /static/ {
+        alias /staticfiles/;
+    }
+
+    # Обслуживание медиа файлов
+    location /media/ {
+        alias /mediafiles/;
+    }
+
+    # Основной путь для SPA (например, для фронтенда)
+    location / {
+        root /staticfiles;  # Убедитесь, что указана правильная директория
+        try_files $uri $uri/ /index.html;  # Перенаправление на index.html если файл не найден
+    }
 }
